[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io = []

[profile.release]
debug = true

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
nom = "8.0.0"
indoc = "2.0.1"
fxhash = "0.2.1"
